ical/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ical-service
spec:
  selector:
    app: ical
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
