ical/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ical-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ical.harryesses.com
    secretName: ical-tls
  rules:
  - host: ical.harryesses.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ical-service
            port:
              number: 80
